--- a/cheekat-common/pom.xml
+++ b/cheekat-common/pom.xml
@@ -204,5 +204,18 @@
     <artifactId>jdom</artifactId>
     <version>1.1</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+<dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+    <version>2.8.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+<dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-redis</artifactId>
+    <version>2.0.3.RELEASE</version>
+</dependency>
+
 	</dependencies>
 </project>
